--- a/dot_aptfile.tmpl
+++ b/dot_aptfile.tmpl
@@ -104,6 +104,7 @@ packagelist "apt-utils" "debconf-utils" "dpkg-sig" "gpg" "wget"
 apt_repository "azlux" "http://packages.azlux.fr/debian/" "bullseye main" "" "https://azlux.fr/repo.gpg"
 deb_repo "chezmoi" "https://github.com/twpayne/chezmoi/releases/download/v2.18.1/chezmoi_2.18.1_linux_amd64.deb" ""
 apt_repository "speedtest-cli" "https://packagecloud.io/ookla/speedtest-cli/ubuntu/" "focal main" "" "https://packagecloud.io/ookla/speedtest-cli/gpgkey"
+apt_repository "yq" "https://ppa.launchpadcontent.net/rmescandon/yq/ubuntu" "focal main" "" "https://keyserver.ubuntu.com/pks/lookup?op=get&search=0x9a2d61f6bb03ced7522b8e7d6657dbe0cc86bb64"
 update
 
 packagelist "apt-file" "synaptic"
