--- a/dot_bashrc.tmpl
+++ b/dot_bashrc.tmpl
@@ -5,7 +5,7 @@ if [[ $- != *i* ]]; then
 fi
 
 {{- $sourceDir := .chezmoi.sourceDir }}
-{{ range $file := glob (joinPath $sourceDir "shell/{config,completion,functions}/*.{bash,sh}") }}
+{{ range $file := glob (joinPath $sourceDir "shell/{config,functions}/*.{bash,sh}") }}
 # source={{ replace (print $sourceDir "/") "" $file }}
 {{ include $file -}}
 {{ end -}}
