--- a/.chezmoiscripts/run_onchange_after_50_vim.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_50_vim.sh.tmpl
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 # Configuration
-# .vimrc: {{ include "dot_vimrc" | sha256sum }}
+# .vimrc: {{ include "exact_dot_vim/vimrc" | sha256sum }}
 
 set -o errexit
 set -o nounset
