Move VSCode extensions

--- a/.chezmoiscripts/run_onchange_after_50_vscode.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_50_vscode.sh.tmpl
@@ -4,6 +4,8 @@ set -o errexit
 set -o nounset
 set -o pipefail
 
+{{ include "shell/environment/xdg.sh" -}}
+
 {{ if not .headless -}}
 {{
   $extensions := list
