Add missing package

--- a/dot_aptfile.tmpl
+++ b/dot_aptfile.tmpl
@@ -182,14 +182,13 @@ packagelist "docker-ce" "docker-ce-cli" "docker-compose-plugin"
 package "dropbox"
 package "gh"
 package "gimp"
-{{ if not .headless -}}
 package_from_url "google-chrome-stable" "https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb"
-{{ end -}}
 packagelist "kubectl" "minikube"
 package "liquidprompt"
 packagelist "network-manager-l2tp" "network-manager-openconnect"
 packagelist "packer" "terraform"
 packagelist "podman" "fuse-overlayfs" "skopeo" "slirp4netns" "uidmap"
+package "python3-nautilus"
 package "tmux"
 package "xclip"
 {{- end }}
