Install the latest version of `chezmoi`

--- a/dot_aptfile.tmpl
+++ b/dot_aptfile.tmpl
@@ -98,11 +98,11 @@ EOF
 }
 
 # Dependencies used within `aptfile`.
-packagelist "apt-utils" "debconf-utils" "dpkg-sig" "gpg" "wget"
+packagelist "apt-utils" "debconf-utils" "dpkg-sig" "gpg" "jq" "wget"
 
 # Repositories.
 apt_repository "azlux" "http://packages.azlux.fr/debian/" "bullseye main" "" "https://azlux.fr/repo.gpg"
-deb_repo "chezmoi" "https://github.com/twpayne/chezmoi/releases/download/v2.18.1/chezmoi_2.18.1_linux_amd64.deb" ""
+deb_repo "chezmoi" "https://github.com/twpayne/chezmoi/releases/download/\$(curl --fail --location --show-error --silent https://api.github.com/repos/twpayne/chezmoi/releases/latest | jq --raw-output .name)/chezmoi_\$(curl --fail --location --show-error --silent https://api.github.com/repos/twpayne/chezmoi/releases/latest | jq --raw-output .name | cut --characters=2-)_linux_amd64.deb" ""
 apt_repository "speedtest-cli" "https://packagecloud.io/ookla/speedtest-cli/ubuntu/" "focal main" "" "https://packagecloud.io/ookla/speedtest-cli/gpgkey"
 apt_repository "yq" "https://ppa.launchpadcontent.net/rmescandon/yq/ubuntu" "focal main" "" "https://keyserver.ubuntu.com/pks/lookup?op=get&search=0x9a2d61f6bb03ced7522b8e7d6657dbe0cc86bb64"
 update
@@ -150,7 +150,6 @@ package "fd-find"
 package "fzf"
 package "gawk"
 package "gpg"
-package "jq"
 package "less" "moreutils"
 package "meshlab"
 packagelist "parallel" "retry"
