--- a/dot_aptfile.tmpl
+++ b/dot_aptfile.tmpl
@@ -183,6 +183,7 @@ package "dropbox"
 package "gh"
 package "gimp"
 package_from_url "google-chrome-stable" "https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb"
+package "i3"
 packagelist "kubectl" "minikube"
 package "liquidprompt"
 packagelist "network-manager-l2tp" "network-manager-openconnect"
