--- a/.chezmoiscripts/run_onchange_after_50_virtualenv.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_50_virtualenv.sh.tmpl
@@ -10,10 +10,7 @@ set -o pipefail
 {{ include "shell/config/asdf.sh" -}}
 {{ include "shell/environment/path.sh" -}}
 
-# See danhper/asdf-python#127.
-asdf exec python3 -m ensurepip
-
-test -d .venv/bin || python3 -m venv .venv
+test -d .venv/bin || python -m venv .venv
 command -v pip-sync >/dev/null || pip install pip-tools
 pip-compile --annotation-style line --upgrade --output-file .venv/requirements.txt --strip-extras --no-emit-index-url .venv/requirements.in
 pip-sync --quiet --pip-args '--disable-pip-version-check' .venv/requirements.txt
