--- a/dot_manpath.tmpl
+++ b/dot_manpath.tmpl
@@ -1,2 +1,2 @@
 # See asdf-vm/asdf#263.
-MANPATH_MAP {{ .chezmoi.homeDir }}/.asdf/shims {{ .chezmoi.homeDir }}/.asdf/installs/*/*/share/man
+MANPATH_MAP {{ .chezmoi.homeDir }}/.local/share/asdf/shims {{ .chezmoi.homeDir }}/.local/share/asdf/installs/*/*/share/man
