Set `HASS_SERVER` and `HASS_TOKEN`

--- a/dot_aptfile.tmpl
+++ b/dot_aptfile.tmpl
@@ -193,6 +193,10 @@ package "tmux"
 package "xclip"
 {{- end }}
 
+{{ if .personal -}}
+package "lastpass-cli"
+{{- end }}
+
 {{ if .work -}}
 # Work
 apt_repository "cloudflare" "https://pkg.cloudflare.com" "focal main" "" "https://pkg.cloudflare.com/cloudflare-main.gpg"
