Install `asdf-rust`

--- a/.chezmoiscripts/run_onchange_after_20_asdf.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_20_asdf.sh.tmpl
@@ -32,6 +32,7 @@ asdf_plugin golang
 asdf_plugin hadolint
 asdf_plugin nodejs
 asdf_plugin python
+asdf_plugin rust
 asdf_plugin shellcheck
 asdf_plugin shfmt
 
