--- a/dot_bash_completion.tmpl
+++ b/dot_bash_completion.tmpl
@@ -1,7 +1,11 @@
 {{ include "shell/helpers.sh" }}
 
 {{- $sourceDir := .chezmoi.sourceDir -}}
-{{ range $file := glob (joinPath $sourceDir "shell/completion/*.{bash,sh}") }}
+{{ range $file := glob (joinPath $sourceDir "shell/completion/*.{bash,sh}{,.tmpl}") }}
 # source={{ replace (print $sourceDir "/") "" $file }}
+{{ if hasSuffix ".tmpl" $file -}}
+{{ includeTemplate $file $ -}}
+{{ else -}}
 {{ include $file -}}
+{{ end -}}
 {{ end -}}
