--- a/shell/completion/hass-cli.bash.tmpl
+++ b/shell/completion/hass-cli.bash.tmpl
@@ -1,4 +1,5 @@
-# TODO: This should only be included when `.personal` is `true` (see twpayne/chezmoi#2310).
+{{ if .personal -}}
 if command_exists hass-cli; then
   source <(_HASS_CLI_COMPLETE=bash_source hass-cli completion)
 fi
+{{ end -}}
