--- a/shell/environment/browser.sh.tmpl
+++ b/shell/environment/browser.sh.tmpl
@@ -1,6 +1,7 @@
-# TODO: This should only be included when `.headless` is `false` (see twpayne/chezmoi#2310).
+{{ if not .headless -}}
 if test -v DISPLAY; then
   if command_exists google-chrome; then
     export BROWSER='google-chrome'
   fi
 fi
+{{ end -}}
