Install LastPass CLI

--- a/dot_aptfile.tmpl
+++ b/dot_aptfile.tmpl
@@ -115,6 +115,7 @@ package "chezmoi"
 packagelist "curl" "wget"
 package "flatpak"
 package "libarchive-tools"
+package "lastpass-cli"
 
 # Development
 packagelist "bash" "bash-completion"
