--- a/shell/environment/hass-cli.sh.tmpl
+++ b/shell/environment/hass-cli.sh.tmpl
@@ -1,6 +1,10 @@
 {{ if .personal -}}
 if command_exists hass-cli; then
   export HASS_SERVER='http://homeassistant.spence.network'
+
+  {{- /* TODO: Two executions of `chezmoi apply` are required on initial bootstrap */ -}}
+  {{- if (lookPath "lpass") }}
   export HASS_TOKEN={{ (index (lastpassRaw "hass-cli") 0).note | squote }}
+  {{- end }}
 fi
 {{ end -}}
