--- a/shell/environment/hass-cli.sh.tmpl
+++ b/shell/environment/hass-cli.sh.tmpl
@@ -1,6 +1,6 @@
 {{ if .personal -}}
 if command_exists hass-cli; then
-  export HASS_SERVER='http://homeassistant.spence.network'
+  export HASS_SERVER='https://homeassistant.spence.network'
 
   {{- /* TODO: Two executions of `chezmoi apply` are required on initial bootstrap */ -}}
   {{- if (lookPath "lpass") }}
