--- a/dot_config/exact_go/env.tmpl
+++ b/dot_config/exact_go/env.tmpl
@@ -1,3 +1,3 @@
 {{ if .work -}}
-GOPROXY=https://packages.atlassian.com/go-proxy
+GOPROXY=https://packages.atlassian.com/artifactory/private-go,https://proxy.golang.org,direct
 {{- end }}
