Update Zoom GPG key

--- a/dot_aptfile.tmpl
+++ b/dot_aptfile.tmpl
@@ -204,7 +204,7 @@ package "lastpass-cli"
 # Work
 apt_repository "cloudflare" "https://pkg.cloudflare.com" "focal main" "" "https://pkg.cloudflare.com/cloudflare-main.gpg"
 apt_repository "slack" "https://packagecloud.io/slacktechnologies/slack/debian/" "jessie main" "" "https://packagecloud.io/slacktechnologies/slack/gpgkey"
-deb_repo "zoom" "https://zoom.us/client/latest/zoom_amd64.deb" "https://zoom.us/linux/download/pubkey"
+deb_repo "zoom" "https://zoom.us/client/latest/zoom_amd64.deb" "https://zoom.us/linux/download/pubkey?version=5-12-6"
 
 package "awscli"
 package "cloudflared"
