--- a/dot_bashrc.tmpl
+++ b/dot_bashrc.tmpl
@@ -5,7 +5,7 @@ if [[ $- != *i* ]]; then
 fi
 
 {{- $sourceDir := .chezmoi.sourceDir }}
-{{ range $file := glob (joinPath $sourceDir "shell/{config,functions}/*.{bash,sh}{,.tmpl}") }}
+{{ range $file := glob (joinPath $sourceDir "shell/{config,functions}/*.{bash,bash.tmpl,sh,sh.tmpl}") }}
 # source={{ replace (print $sourceDir "/") "" $file }}
 {{ if hasSuffix ".tmpl" $file -}}
 {{ includeTemplate $file $ -}}
