--- a/.chezmoiscripts/run_onchange_after_50_virtualenv.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_50_virtualenv.sh.tmpl
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 # Configuration
-# .venv/requirements.in: {{ include "dot_venv/requirements.in" | sha256sum }}
+# .venv/requirements.in: {{ include "dot_venv/requirements.in.tmpl" | sha256sum }}
 
 set -o errexit
 set -o nounset
