--- a/.chezmoiignore.tmpl
+++ b/.chezmoiignore.tmpl
@@ -5,7 +5,6 @@
 # Private
 /.gnupg/
 /.ssh/keys/
-/.ssh/known_hosts
 /.terraformrc
 
 {{ if .headless -}}
@@ -54,6 +53,7 @@
 /.node/
 /.node_repl_history
 /snap/
+/.ssh/known_hosts{,.old}
 /.terraform.d/
 /.tox/
 /.wget-hsts
