Unpin `homeassistant-cli`

--- a/dot_venv/requirements.in.tmpl
+++ b/dot_venv/requirements.in.tmpl
@@ -6,7 +6,7 @@ esphome
 esptool
 gnome-extensions-cli
 gphotos-sync
-homeassistant-cli @ git+https://github.com/home-assistant-ecosystem/home-assistant-cli@0.9.5
+homeassistant-cli
 httpie
 pip-tools
 pre-commit
