--- a/.chezmoiscripts/run_onchange_after_10_snap.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_10_snap.sh.tmpl
@@ -4,6 +4,7 @@ set -o errexit
 set -o nounset
 set -o pipefail
 
+{{ if lookPath "snap" -}}
 {{ $username := .chezmoi.username -}}
 {{
   $snaps := list
@@ -13,4 +14,5 @@ set -o pipefail
 {{ range $snaps -}}
 {{ if ne $username "root" -}}sudo {{ end -}}
 snap install {{ . }}
+{{ end -}}
 {{ end -}}
