--- a/.chezmoiscripts/run_onchange_after_20_asdf.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_20_asdf.sh.tmpl
@@ -34,6 +34,7 @@ asdf_plugin nodejs
 asdf_plugin python
 asdf_plugin rust
 asdf_plugin shellcheck
+asdf_plugin shfmt
 
 # Install tool versions.
 asdf install
