--- a/.chezmoiscripts/run_onchange_after_50_tmux.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_50_tmux.sh.tmpl
@@ -7,5 +7,7 @@ set -o errexit
 set -o nounset
 set -o pipefail
 
+{{ if lookPath "tmux" -}}
 ~/.tmux/plugins/tpm/bin/install_plugins
 ~/.tmux/plugins/tpm/bin/update_plugins all
+{{ end -}}
