Don't hardcode VSCode extension path

--- a/dot_config/Code/User/settings.json.tmpl
+++ b/dot_config/Code/User/settings.json.tmpl
@@ -24,7 +24,7 @@
   "terminal.integrated.enableMultiLinePasteWarning": false,
   "go.toolsManagement.autoUpdate": true,
   "yaml.schemas": {
-    "file:///home/jspence2/.local/share/Code/extensions/atlassian.atlascode-2.10.12/resources/schemas/pipelines-schema.json": "bitbucket-pipelines.yml"
+    "file://{{ glob (print .chezmoi.homeDir "/.local/share/Code/extensions/atlassian.atlascode-*") | mustFirst }}/resources/schemas/pipelines-schema.json": "bitbucket-pipelines.yml"
   },
   "gitlens.currentLine.enabled": false,
   "editor.codeLens": false,
