--- a/dot_config/exact_go/env.tmpl
+++ b/dot_config/exact_go/env.tmpl
@@ -1,3 +1,4 @@
 {{ if .work -}}
+GOPRIVATE=bitbucket.org/atlassianlabs/*
 GOPROXY=https://packages.atlassian.com/artifactory/private-go,https://proxy.golang.org,direct
 {{- end }}
