--- a/.chezmoiscripts/run_onchange_after_50_vscode.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_50_vscode.sh.tmpl
@@ -21,6 +21,8 @@ set -o pipefail
     "ms-vscode-remote.remote-containers"
     "ms-vscode-remote.remote-ssh"
     "ms-vscode-remote.remote-ssh-edit"
+    "ms-vscode.makefile-tools"
+    "ms-vscode.remote-explorer"
     "ms-vsliveshare.vsliveshare"
     "netcorext.uuid-generator"
     "redhat.vscode-yaml"
