--- a/dot_venv/requirements.in.tmpl
+++ b/dot_venv/requirements.in.tmpl
@@ -16,3 +16,6 @@ backports.zoneinfo ; python_version < '3.9'
 
 # Needed by `gnome-extensions-cli`.
 pygobject
+
+# See httpie/httpie#1499.
+urllib3 < 2
