Install `yubikey-manager`

--- a/dot_aptfile.tmpl
+++ b/dot_aptfile.tmpl
@@ -215,6 +215,7 @@ deb_repo "zoom" "https://zoom.us/client/latest/zoom_amd64.deb" "https://zoom.us/
 package "awscli"
 package "cloudflared"
 package "slack-desktop"
+package "yubikey-manager" "yubikey-manager-qt"
 package "zoom"
 {{- end }}
 
