--- a/dot_aptfile.tmpl
+++ b/dot_aptfile.tmpl
@@ -224,6 +224,7 @@ package "cmatrix"
 package "ghostscript"
 package "rename"
 {{ if not .headless -}}
+package "g810-led"
 package "sox"
 package "xdg-utils"
 {{ end -}}
