Install some additional Atlas plugins

--- a/.chezmoiscripts/run_onchange_after_50_atlas.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_50_atlas.sh.tmpl
@@ -9,10 +9,17 @@ set -o pipefail
 {{
   $plugins := list
     "asap"
+    "atlops"
+    "chaos"
+    "cloudtoken"
+    "dac"
     "micros"
     "nebulae"
     "packages"
+    "perfhammer"
     "poco"
+    "rollcall"
+    "shipyard"
     "slauth"
     "spin"
     "statlas"
