--- a/.chezmoiscripts/run_onchange_after_50_vscode.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_50_vscode.sh.tmpl
@@ -15,6 +15,7 @@ set -o pipefail
     "hashicorp.terraform"
     "keesschollaart.vscode-home-assistant"
     "mohsen1.prettify-json"
+    "mrmlnc.vscode-json5"
     "ms-azuretools.vscode-docker"
     "ms-python.python"
     "ms-vscode-remote.remote-containers"
