--- a/dot_aptfile.tmpl
+++ b/dot_aptfile.tmpl
@@ -224,7 +224,7 @@ package "cmatrix"
 package "ghostscript"
 package "rename"
 {{ if not .headless -}}
-package "g810-led"
+packagelist "g810-led" "solaar"
 package "sox"
 package "xdg-utils"
 {{ end -}}
