Install `bazel` using `asdf`

--- a/.chezmoiscripts/run_onchange_after_20_asdf.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_20_asdf.sh.tmpl
@@ -28,6 +28,7 @@ asdf update
 asdf_plugin act
 asdf_plugin actionlint
 asdf_plugin bats
+asdf_plugin bazel
 asdf_plugin golang
 asdf_plugin hadolint
 asdf_plugin nodejs
