Revert "Remove virtualbox"
This reverts commit 4232f14af7b21b69b4552579899bfe39dd6cafd5.

--- a/dot_aptfile.tmpl
+++ b/dot_aptfile.tmpl
@@ -183,6 +183,7 @@ apt_repository "dropbox" "https://linux.dropbox.com/ubuntu" "disco main" "i386,a
 apt_repository "hashicorp" "https://apt.releases.hashicorp.com" "${DISTRIB_CODENAME} main" "amd64" "https://apt.releases.hashicorp.com/gpg"
 apt_repository "kubernetes" "https://apt.kubernetes.io" "kubernetes-yakkety main" "" "https://packages.cloud.google.com/apt/doc/apt-key.gpg"
 deb_repo "minikube" "https://github.com/kubernetes/minikube/releases/download/v1.26.0/minikube_1.26.0-0_amd64.deb" ""
+apt_repository "virtualbox" "https://download.virtualbox.org/virtualbox/debian" "${DISTRIB_CODENAME} contrib" "amd64" "https://www.virtualbox.org/download/oracle_vbox_2016.asc"
 apt_repository "vscode" "https://packages.microsoft.com/repos/code" "stable main" "amd64,arm64,armhf" "https://packages.microsoft.com/keys/microsoft.asc"
 
 package "code"
@@ -196,7 +197,7 @@ package "i3"
 packagelist "kubectl" "minikube"
 package "liquidprompt"
 packagelist "network-manager-l2tp" "network-manager-openconnect"
-packagelist "packer" "terraform" "vagrant"
+packagelist "packer" "terraform" "vagrant" "virtualbox-7.0"
 packagelist "podman" "fuse-overlayfs" "skopeo" "slirp4netns" "uidmap"
 package "tmux"
 package "xclip"
