Install `gnutls-bin`

--- a/dot_aptfile.tmpl
+++ b/dot_aptfile.tmpl
@@ -118,7 +118,7 @@ update
 
 packagelist "apt-file" "synaptic"
 package "chezmoi"
-packagelist "curl" "wget"
+packagelist "curl" "gnutls-bin" "wget"
 package "flatpak"
 package "libarchive-tools"
 package "lastpass-cli"
