Don't need `--resolver backtracking` anymore

--- a/.chezmoiscripts/run_onchange_after_50_virtualenv.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_50_virtualenv.sh.tmpl
@@ -12,5 +12,5 @@ set -o pipefail
 
 test -d .venv/bin || python -m venv .venv
 command -v pip-sync >/dev/null || pip install pip-tools
-pip-compile --annotation-style line --upgrade --output-file .venv/requirements.txt --allow-unsafe --strip-extras --resolver backtracking --no-emit-index-url .venv/requirements.in
+pip-compile --annotation-style line --upgrade --output-file .venv/requirements.txt --allow-unsafe --strip-extras --no-emit-index-url .venv/requirements.in
 pip-sync --quiet --pip-args '--disable-pip-version-check' .venv/requirements.txt
