--- a/.chezmoiscripts/run_onchange_after_10_aptfile.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_10_aptfile.sh.tmpl
@@ -1,59 +1,6 @@
 #!{{ if ne .chezmoi.username "root" -}} {{ lookPath "sudo" }} {{ end -}} .local/bin/aptfile
 
-source /etc/lsb-release
-
-function apt_repository() {
-  local -r name="$1"
-  local -r apt_repo="$2"
-  local -r components="$3"
-  local -r architecture="$4"
-  local -r gpg_key="$5"
-
-  [[ -z $name ]] && log_fail "Please specify a repository name"
-  [[ -z $apt_repo ]] && log_fail "Please specify a repository source URL"
-  [[ -z $components ]] && log_fail "Please specify repository components"
-
-  local apt_opts=()
-  [[ -n $architecture ]] && apt_opts+=("arch=${architecture}")
-
-  if [[ -n $gpg_key ]]; then
-    apt_keyring "${name}" "${gpg_key}"
-    apt_opts+=("signed-by=/etc/apt/keyrings/${name}.gpg")
-  fi
-
-  repository_file "${name}" "deb [${apt_opts[*]}] ${apt_repo} ${components}"
-}
-
-function apt_keyring() {
-  local -r name="$1"
-  local -r gpg_key="$2"
-  local -r gpg_import="${3}"
-
-  [[ -z $name ]] && log_fail "Please specify a keyring name"
-  [[ -z $gpg_key ]] && log_fail "Please specify a GPG key"
-
-  local -r apt_keyring_d="/etc/apt/keyrings"
-  local -r apt_keyring="${apt_keyring_d}/${name}.gpg"
-
-  if [[ -f $apt_keyring ]]; then
-    log_info "${APTFILE_CYAN}[OK]${APTFILE_COLOR_OFF} keyring ${name}"
-    return
-  fi
-
-  if [[ ! -d $apt_keyring_d ]]; then
-    mkdir "${apt_keyring_d}"
-  fi
-
-  (wget --quiet --output-document=- "${gpg_key}" | gpg --dearmor --output "${apt_keyring}") >"${TMP_APTFILE_LOGFILE}" 2>&1
-  [[ $? -eq 0 ]] || log_fail "${APTFILE_RED}[FAIL]${APTFILE_COLOR_OFF} keyring ${name}"
-
-  if [[ -n $gpg_import ]]; then
-    gpg --import "${apt_keyring}" >>"${TMP_APTFILE_LOGFILE}" 2>&1
-    [[ $? -eq 0 ]] || log_fail "${APTFILE_RED}[FAIL]${APTFILE_COLOR_OFF} keyring ${name}"
-  fi
-
-  log_info "${APTFILE_GREEN}[NEW]${APTFILE_COLOR_OFF} keyring ${name}"
-}
+source {{ joinPath .chezmoi.sourceDir "src/aptfile.bash" }}
 
 # Dependencies used within `aptfile`.
 packagelist "gpg" "wget"
