--- a/.chezmoiscripts/run_onchange_after_10_aptfile.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_10_aptfile.sh.tmpl
@@ -10,7 +10,7 @@ apt_repository "vscode" "https://packages.microsoft.com/repos/code" "stable main
 # Development
 package "code"
 packagelist "docker-ce" "docker-ce-cli"
-package "git"
+package "git" "git-crypt"
 package "liquidprompt" 
 package "openssh-client"
 package "terraform"
@@ -22,6 +22,7 @@ package "xclip"
 packagelist "globalprotect" "resolvconf"
 {{- end }}
 package "nmap"
+package "tcpdump"
 package "traceroute"
 package "whois"
 
