Add some AWS CLI stuff

--- a/.chezmoiignore.tmpl
+++ b/.chezmoiignore.tmpl
@@ -23,6 +23,14 @@
 /TODO
 /workspace/
 
+# AWS
+/.aws/cli/
+/.aws/cli/cache/
+/.aws/config
+/.aws/credentials
+/.aws/sso/
+/.aws/sso/cache/
+
 # Private
 /.gnupg/
 /.ssh/keys/
