--- a/.chezmoiscripts/run_onchange_after_10_aptfile.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_10_aptfile.sh.tmpl
@@ -26,6 +26,10 @@ package "tcpdump"
 package "traceroute"
 package "whois"
 
+# Programming
+ppa "longsleep/golang-backports"
+package "golang-go"
+
 # Utility
 package "curl"
 package "htop"
