Install `gnome-shell-extensions` and `gnome-tweaks`

--- a/.chezmoiscripts/run_onchange_after_10_aptfile.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_10_aptfile.sh.tmpl
@@ -38,6 +38,7 @@ package "golang-go"
 
 # Utility
 package "curl"
+packagelist "gnome-shell-extensions" "gnome-tweaks"
 package "htop"
 package "jq"
 package "parallel"
