--- a/dot_bash_completion.tmpl
+++ b/dot_bash_completion.tmpl
@@ -2,6 +2,7 @@ command_exists() {
   command -v "${1}" >/dev/null
 }
 
+# See aws/aws-cli#2928.
 if command_exists aws; then
   complete -C /snap/aws-cli/current/bin/aws_completer aws
 fi
