--- a/.chezmoiscripts/run_onchange_after_10_snap.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_10_snap.sh.tmpl
@@ -10,6 +10,7 @@ source {{ joinPath .chezmoi.sourceDir "src/snap.bash" }}
 {{
   $snaps := list
     "aws-cli"
+    "shellcheck"
     "slack"
     "yq"
 -}}
