--- a/.chezmoiscripts/run_onchange_aptfile.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_aptfile.sh.tmpl
@@ -35,6 +35,7 @@ package "whois"
 # Programming
 ppa "longsleep/golang-backports"
 package "golang-go"
+packagelist "python3" "python3-virtualenv"
 
 # Utility
 package "curl"
