Install `google-chrome`

--- a/.chezmoiscripts/run_onchange_aptfile.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_aptfile.sh.tmpl
@@ -39,6 +39,7 @@ packagelist "python3" "python3-virtualenv"
 
 # Utility
 package "curl"
+package_from_url "google-chrome-stable" "https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb"
 packagelist "gnome-shell-extensions" "gnome-tweaks"
 package "htop"
 package "jq"
