--- a/.chezmoiscripts/run_onchange_aptfile.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_aptfile.sh.tmpl
@@ -40,6 +40,9 @@ package "whois"
 # Programming
 ppa "longsleep/golang-backports"
 package "golang-go"
+{{ if .work -}}
+package "nix-bin"
+{{- end }}
 packagelist "python3" "python3-virtualenv"
 
 # Utility
