Install `tree` and `meld`

--- a/.chezmoiscripts/run_onchange_aptfile.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_aptfile.sh.tmpl
@@ -52,8 +52,10 @@ package_from_url "google-chrome-stable" "https://dl.google.com/linux/direct/goog
 packagelist "gnome-shell-extensions" "gnome-tweaks"
 package "htop"
 package "jq"
+package "meld"
 package "parallel"
 package "rename"
 package "retry"
+package "tree"
 package "wget"
 package "yubikey-manager"
