--- a/.chezmoiscripts/run_onchange_aptfile.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_aptfile.sh.tmpl
@@ -23,7 +23,9 @@ package "xclip"
 
 # Hardware
 {{ if and (eq (output "cat" "/sys/devices/virtual/dmi/id/sys_vendor" | trim) "Dell Inc.") (eq (output "cat" "/sys/devices/virtual/dmi/id/product_name" | trim) "Precision 5680") -}}
+# See https://wiki.ubuntu.com/IntelMIPICamera.
 packagelist "linux-modules-ipu6-generic-hwe-{{ .chezmoi.osRelease.versionID }}" "linux-modules-ivsc-generic-hwe-{{ .chezmoi.osRelease.versionID }}"
+package "v4l2-relayd"
 {{- end }}
 
 # Networking
