Configure `age` for encryption

--- a/.chezmoi.yaml.tmpl
+++ b/.chezmoi.yaml.tmpl
@@ -6,6 +6,10 @@
 {{ end -}}
 
 ---
+age:
+  identity: '~/.config/chezmoi/age.key'
+  recipient: 'age128dedd8uzyxfd3ehp2ghyu6htssk4guuwh883ccljzsac2s67afsxtaqwz'
 data:
   personal: {{ $personal }}
   work: {{ $work }}
+encryption: 'age'
