Add work SSH config

--- a/dot_bash_completion.tmpl
+++ b/dot_bash_completion.tmpl
@@ -15,4 +15,8 @@ if command_exists terraform; then
   complete -C terraform terraform
 fi
 
+if command_exists tsh; then
+  source <(tsh --completion-script-bash)
+fi
+
 {{ completion "bash" }}
